--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "beautifulsoup4>=4.14.3",
+    "openai>=2.24.0",
+    "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "selenium>=4.41.0",
 ]
